--- a/scss/variables/components/_sidebar.scss
+++ b/scss/variables/components/_sidebar.scss
@@ -71,6 +71,9 @@ $sidebar-nav-link-padding-y:    .8445rem !default;
 $sidebar-nav-link-padding-x:    1rem !default;
 $sidebar-nav-icon-width:        56px !default;
 
+$sidebar-nav-indentation-levels: 5 !default;
+$sidebar-nav-indentation-size:   8px !default;
+
 $sidebar-dark-nav-title-color:      rgba($white, .6) !default;
 $sidebar-dark-nav-link-color:       rgba($white, .8) !default;
 $sidebar-dark-nav-link-bg:          transparent !default;
