feat: add more colors to toasts

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -37,6 +37,7 @@
 @import "mixins/sidebar-width"; // TODO: refactor
 @import "mixins/switches";
 @import "mixins/table-row";
+@import "mixins/toasts";
 @import "mixins/icon";
 
 // Skins
