fix: add missing selectors

--- a/scss/_transitions.scss
+++ b/scss/_transitions.scss
@@ -61,6 +61,7 @@
     .c-sidebar-nav-icon,
     .c-sidebar-nav-dropdown,
     .c-sidebar-nav-dropdown-toggle,
+    .c-sidebar-nav-dropdown-toggle::after,
     .c-sidebar-nav-dropdown-items,
     .c-sidebar-nav-label,
     .c-sidebar-footer,
